--- a/courseapp/courses/templates/coursespages/index.html
+++ b/courseapp/courses/templates/coursespages/index.html
@@ -3,5 +3,15 @@
 {% block title %}Courses{% endblock title %}
 
 {% block content %}
-<h1>Courses</h1>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-3">
+            <!--Menu-->
+            {% include 'coursespages/partials/_categories.html' %}
+        </div>
+        <div class="col-9">
+            <!--Content-->    
+        </div>
+    </div>
+</div>
 {% endblock content %}
