--- a/courseapp/pages/templates/pages/about.html
+++ b/courseapp/pages/templates/pages/about.html
@@ -3,5 +3,13 @@
 {% block title %}About{% endblock title %}
 
 {% block content %}
-<h1>About Page</h1>
+<div class="container mt-3">
+    <div class="row">
+    
+        <div class="col-12">
+            <!--Content-->
+            <h1>About Page</h1> 
+        </div>
+    </div>
+</div>
 {% endblock content %}
