--- a/courseapp/pages/templates/pages/contact.html
+++ b/courseapp/pages/templates/pages/contact.html
@@ -7,6 +7,13 @@
 
 
 {% block content %}
-<h1>Contact</h1>
-<i class="fa-solid fa-code"></i>
+<div class="container mt-3">
+    <div class="row">
+    
+        <div class="col-12">
+            <!--Content-->
+            <h1>Contact Page</h1> 
+        </div>
+    </div>
+</div>
 {% endblock%}
