--- a/courseapp/pages/templates/pages/index.html
+++ b/courseapp/pages/templates/pages/index.html
@@ -3,5 +3,16 @@
 {% block title %}Courses Home Page{% endblock title %}
 
 {% block content %}
-<h1>Courses Home Page</h1>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-3">
+            <!--Menu-->
+            {% include 'coursespages/partials/_categories.html' %}
+        </div>
+        <div class="col-9">
+           <h1>Courses Home Page</h1>
+            
+        </div>
+    </div>
+</div>
 {% endblock content %}
