--- a/courseapp/courses/templates/coursespages/partials/_categories.html
+++ b/courseapp/courses/templates/coursespages/partials/_categories.html
@@ -1,11 +1,7 @@
 <div class="list-group">
-    <a href="#" class="list-group-item list-group-item-action">
-        Programlama
-    </a>
-    <a href="#" class="list-group-item list-group-item-action">
-        Web geliştirme
-    </a>
-    <a href="#" class="list-group-item list-group-item-action">
-        Veritabanı 
-    </a>
-</div>
+
+    {% for category in categories %}
+    <a href="{% url 'courses_by_category' category.slug %}" class="list-group-item list-group-item-action">{{category.name}}</a>
+    {% endfor %}
+
+    </div>
