--- a/courseapp/templates/partials/_nav.html
+++ b/courseapp/templates/partials/_nav.html
@@ -3,7 +3,7 @@
         <a href="/" class="navbar-brand">Course App</a>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-                <a href="/" class="nav-link">Courses</a>
+                <a href="/kurslar" class="nav-link">Courses</a>
             </li>
             <li class="nav-item">
                 <a href="/contact" class="nav-link">Contact</a>
