--- a/courseapp/courses/templates/coursespages/partials/_course.html
+++ b/courseapp/courses/templates/coursespages/partials/_course.html
@@ -1,12 +1,23 @@
+{% load static %}
 <div class="card mb-3">
     <div class="row">
         <div class="col-4">
-            <img class="img-fluid rounded-start" src="{{course.imageUrl}}" alt="{{course.title}}">
+            <img class="img-fluid rounded-start" src="{% static "courses/img/"|add:course.imageUrl %}" alt="{{course.title}}">
         </div>
         <div class="col-8">
             <div class="card-body">
                 <h5 class="card-title">{{course.title}}</h5>
-                <p class="card-text">{{course.description}}</p>
+                <p class="card-text">{{course.description|truncatechars:16}}</p>
+                <span>
+                    {% if course.isUpdated %}
+                        <span class="badge bg-success text-green">Updated</span>
+                        {% else %}
+                        <span class="badge bg-secondary text-dark">Not Updated</span>
+                    {% endif %}
+                </span>
+                <p>
+                    {{course.date | date:"F d, Y"}}
+                </p>
             </div>
         </div>
     </div>
