--- a/courseapp/courses/templates/coursespages/details.html
+++ b/courseapp/courses/templates/coursespages/details.html
@@ -6,20 +6,19 @@
 {% endblock %}
 
 
-{% block title %}Courses{% endblock title %}
+{% block title %}{{course.title}}{% endblock title %}
 
-
+ 
 
 {% block content %}
 <div class="container mt-3">
     <div class="row">
-        <div class="col-3">         
-            {% include 'coursespages/partials/_categories.html' %}   
+        <div class="col-3">     
+            <img class="img-fluid rounded" src="{% static "courses/img/"|add:course.imageUrl %}" alt="{{course.title}}">    
         </div>
         <div class="col-9">
-            {% for course in courses %}
-            {% include 'coursespages/partials/_course.html' %}
-            {% endfor %}
+            <h1 class="h3">{{course.title}}</h1>
+            <p>{{course.description}}</p>
         </div>
     </div>
 </div>
