--- a/courseapp/courses/templates/coursespages/partials/_categories.html
+++ b/courseapp/courses/templates/coursespages/partials/_categories.html
@@ -1,9 +1,11 @@
 <div class="list-group">
 
     {% for category in categories %}
+    {% if category.slug %}
     <a href="{% url 'courses_by_category' category.slug %}" 
     class="list-group-item list-group-item-action">
     {{category.name|title}}</a>
+    {% endif %}
     {% endfor %}
 
     </div>
