--- a/courseapp/courses/templates/coursespages/partials/_categories.html
+++ b/courseapp/courses/templates/coursespages/partials/_categories.html
@@ -1,11 +1,19 @@
 <div class="list-group">
+    
+    <a href ="/kurslar"class="list-group-item list-group-item-action">All Categories<a/>
 
     {% for category in categories %}
-    {% if category.slug %}
-    <a href="{% url 'courses_by_category' category.slug %}" 
-    class="list-group-item list-group-item-action">
-    {{category.name|title}}</a>
-    {% endif %}
-    {% endfor %}
 
-    </div>
+    {% if category.slug %}
+
+    <a href="{% url 'courses_by_category' category.slug %}" 
+
+    class="list-group-item list-group-item-action {% if seciliCategory == category.slug %}active{% endif %}">
+
+    {{category.name|title}}</a>
+
+
+    {% endif %}
+
+    {% endfor %}
+</div>
