--- a/courseapp/courses/templates/coursespages/partials/_course.html
+++ b/courseapp/courses/templates/coursespages/partials/_course.html
@@ -7,9 +7,8 @@
         <div class="col-8">
             <div class="card-body">
                 <h5 class="card-title">
-                    <a href="{% url 'course_details' course.slug %}">
+                    <a href="{% url 'course_details' course.slug %}">  <!-- Removed comma -->
                         {{course.title}}
-
                     </a>
                 </h5>
                 <p class="card-text">{{course.description|truncatechars:16}}</p>
