--- a/courseapp/templates/partials/_nav.html
+++ b/courseapp/templates/partials/_nav.html
@@ -1,16 +1,21 @@
 <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
     <div class="container">
-        <a href="/" class="navbar-brand">Course App</a>
+        <a href="{% url 'index' %}" class="navbar-brand">Course App</a>
         <ul class="navbar-nav me-auto">
             <li class="nav-item">
-                <a href="/kurslar" class="nav-link">Courses</a>
+                <a href="{% url 'index'%}" class="nav-link">Courses</a>
             </li>
             <li class="nav-item">
-                <a href="/contact" class="nav-link">Contact</a>
+                <a href=" {% url "create_course" %} " class="nav-link">Create course</a>
             </li>
-            <li class="nav-item">
+            {% comment %} <li class="nav-item">
                 <a href="/about" class="nav-link">About</a>
-            </li>
+            </li> {% endcomment %}
         </ul> 
+
+        <form class ="d-flex" action=" {% url 'search' %}">
+            <input class = "form-control me-1" type="text" name="q" placeholder="Anahtar kelime">
+            <button type="submit" class="btn btn-secondary">Arama</button>
+        </form>
     </div>
 </nav>
