--- a/courseapp/courses/static/courses/css/style.css
+++ b/courseapp/courses/static/courses/css/style.css
@@ -1,3 +1,17 @@
-body {
-    background-color: antiquewhite;
+.errorlist {
+    list-style-type: none;
+    color: red;
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    background-color: #f8d7da; /* Arka plan rengini değiştirin */
+    border: 1px solid #f5c6cb;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.invalid input, .invalid textarea {
+    border-color: #dc3545;
+    background-color: #f8d7da; /* Arka plan rengini değiştirin */
 }
