--- a/courseapp/courses/templates/coursespages/edit-course.html
+++ b/courseapp/courses/templates/coursespages/edit-course.html
@@ -6,14 +6,14 @@
 {% endblock %}
 
 {% block title %}
-Create Course 
+Edit Course 
 {% endblock title %}
 
 {% block content %}
 <div class="container mt-3">
     <div class="row">
         <div class="col-12">     
-            <form action="{% url "create_course" %}" method="POST">
+            <form method="POST">
                 {% csrf_token %}
                 {% for field in form %}
                 <div class="mb-3 {% if field.errors %} invalid {% endif %}">
