--- a/courseapp/courses/templates/coursespages/course-list.html
+++ b/courseapp/courses/templates/coursespages/course-list.html
@@ -27,7 +27,7 @@
                     {% for course in coursespages %}
                     <tr>
                         <td>
-                            <img src="{% static 'courses/img/'|add:course.imageUrl %}" class="img-fluid">
+                            <img src="{{course.image.url}}" class="img-fluid">
                         </td>
                         <td>{{course.title}}</td>
                         <td>{{course.slug}}</td>
