--- a/courseapp/courses/templates/coursespages/create-course.html
+++ b/courseapp/courses/templates/coursespages/create-course.html
@@ -13,7 +13,7 @@ Create Course
 <div class="container mt-3">
     <div class="row">
         <div class="col-12">     
-            <form action="{% url "create_course" %}" method="POST">
+            <form action="{% url "create_course" %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 <div class="mb-3 {% if field.errors %} invalid {% endif %}">
