extending form, auth and useCreation

--- a/courseapp/templates/layout.html
+++ b/courseapp/templates/layout.html
@@ -8,6 +8,8 @@
     <title>{% block title %}Course App{% endblock title %}</title>
 </head>
 <body>
+    
+    {% include "partials/_messages.html" %}
 
     <!--NAVBAR-->
     {% include 'partials/_nav.html' %}
