--- a/courseapp/courses/templates/coursespages/edit-course.html
+++ b/courseapp/courses/templates/coursespages/edit-course.html
@@ -15,17 +15,7 @@ Edit Course
         <div class="col-12">     
             <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {% for field in form %}
-                <div class="mb-3 {% if field.errors %} invalid {% endif %}">
-                    <label class="form-label" for="{{field.id_for_label}}">{{field.label}}</label>
-                    {{ field }}
-                    {% for error in field.errors %}
-                    <div class="alert alert-danger mt-2">
-                        {{ error }}
-                    </div>
-                    {% endfor %}
-                </div>
-                {% endfor %}
+                {% include "partials/_form.html" %}
                 <button class="btn btn-primary" type="submit">Save</button>
             </form>
         </div>
