--- a/courseapp/templates/partials/_nav.html
+++ b/courseapp/templates/partials/_nav.html
@@ -1,22 +1,57 @@
 <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
-    <div class="container">
-        <a href="{% url 'index' %}" class="navbar-brand">Course App</a>
-        <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-                <a href="{% url 'index'%}" class="nav-link">Courses</a>
-            </li>
-            <li class="nav-item">
-                <a href=" {% url "create_course" %} " class="nav-link">Admin Create course</a>
-            </li>
-            <li class="nav-item">
-                <a href=" {% url "course_list" %} " class="nav-link">Admin courses</a>
-            </li>
-            
-        </ul> 
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'index' %}">Courses</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <form class ="d-flex" action=" {% url 'search' %}">
-            <input class = "form-control me-1" type="text" name="q" placeholder="Anahtar kelime">
-            <button type="submit" class="btn btn-secondary">Arama</button>
-        </form>
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a href="{% url 'index' %}" class="nav-link">Courses</a>
+                </li>
+
+                {% if user.is_superuser %}
+                <li class="nav-item">
+                    <a href="{% url 'create_course' %}" class="nav-link">Admin Create Course</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'course_list' %}" class="nav-link">Admin Courses</a>
+                </li>
+                {% endif %}
+
+
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Hoşgeldin, {{user.username}}</a>
+                    </li> 
+                    <li class="nav-item">
+                        <a href="{% url 'change_password' %}" class="nav-link">Parola güncelle</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'user_logout' %}" class="nav-link">Logout</a>
+                    </li>
+                {% else %}
+                
+                    <li class="nav-item">
+                        <a href="{% url 'user_login' %}" class="nav-link">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'user_register' %}" class="nav-link">Register</a>
+                    </li>
+                {% endif %}
+            
+            </ul>
+
+
+            <form class="d-flex" action="{% url 'search' %}">
+                <input class="form-control me-2" type="search" name="q" placeholder="Anahtar kelime" aria-label="Search">
+                <button class="btn btn-outline-secondary" type="submit">Arama</button>
+            </form>
+        </div>
     </div>
 </nav>
